--- a/styles.css
+++ b/styles.css
@@ -131,9 +131,36 @@ section {
             }
 
         }
+    }
 
-        li::marker {
-            margin: 0;
+    &.ingredients {
+        display: flex;
+        flex-direction: column;
+        gap: var(--spacing-preset-300);
+
+        h2 {
+            font-family: var(--font-family-young-serif);
+            font-size: var(--font-text-preset-2);
+            font-weight: var(--font-weight-preset-1);
+            line-height: var(--font-line-height-preset-1);
+            color: var(--color-brown-800);
+        }
+
+        ul {
+            display: flex;
+            flex-direction: column;
+            gap: var(--spacing-preset-100);
+            color: var(--color-stone-600);
+            list-style-position: outside;
+        }
+
+        li {
+            font-family: var(--font-family-oufit);
+            font-size: var(--font-text-preset-4);
+            font-weight: var(--font-weight-preset-1);
+            line-height: var(--font-line-height-preset-2);
+            color: var(--color-stone-600);
+            margin-left: var(--spacing-preset-300);
         }
     }
 }
