--- a/styles.css
+++ b/styles.css
@@ -164,3 +164,10 @@ section {
         }
     }
 }
+
+hr {
+    width: 100%;
+    height: 0.0625rem;
+    background-color: var(--color-stone-150);
+    border: none;
+}
