--- a/styles.css
+++ b/styles.css
@@ -163,6 +163,42 @@ section {
             margin-left: var(--spacing-preset-300);
         }
     }
+
+    &.instructions {
+        display: flex;
+        flex-direction: column;
+        gap: var(--spacing-preset-300);
+
+        h2 {
+            font-family: var(--font-family-young-serif);
+            font-size: var(--font-text-preset-2);
+            font-weight: var(--font-weight-preset-1);
+            line-height: var(--font-line-height-preset-1);
+            color: var(--color-brown-800);
+        }
+
+        ol {
+            display: flex;
+            flex-direction: column;
+            gap: var(--spacing-preset-100);
+            list-style-position: outside;
+            margin-left: var(--spacing-preset-300);
+        }
+
+        li {
+            font-family: var(--font-family-oufit);
+            font-size: var(--font-text-preset-4);
+            font-weight: var(--font-weight-preset-1);
+            line-height: var(--font-line-height-preset-2);
+            color: var(--color-stone-600);
+            padding-left: var(--spacing-preset-200);
+        }
+
+        li::marker {
+            color: var(--color-brown-800);
+            font-weight: var(--font-weight-preset-3);
+        }
+    }
 }
 
 hr {
