--- a/styles.css
+++ b/styles.css
@@ -199,6 +199,56 @@ section {
             font-weight: var(--font-weight-preset-3);
         }
     }
+
+    &.nutrition {
+        display: flex;
+        flex-direction: column;
+        gap: var(--spacing-preset-300);
+
+        h2 {
+            font-family: var(--font-family-young-serif);
+            font-size: var(--font-text-preset-2);
+            font-weight: var(--font-weight-preset-1);
+            line-height: var(--font-line-height-preset-1);
+            color: var(--color-brown-800);
+        }
+
+        p {
+            font-family: var(--font-family-oufit);
+            font-size: var(--font-text-preset-4);
+            font-weight: var(--font-weight-preset-1);
+            line-height: var(--font-line-height-preset-2);
+            color: var(--color-stone-600);
+        }
+
+        .table__name {
+            font-family: var(--font-family-oufit);
+            font-size: var(--font-text-preset-4);
+            font-weight: var(--font-weight-preset-1);
+            line-height: var(--font-line-height-preset-2);
+            color: var(--color-stone-600);
+        }
+
+        .table__value {
+            font-family: var(--font-family-oufit);
+            font-size: var(--font-text-preset-4);
+            font-weight: var(--font-weight-preset-3);
+            line-height: var(--font-line-height-preset-2);
+            color: var(--color-brown-800);
+        }
+
+        table {
+            border-collapse: collapse;
+        }
+
+        td {
+            padding: var(--spacing-preset-200);
+        }
+
+        tr:not(:last-child) {
+            border-bottom: 0.0625rem solid var(--color-stone-150);
+        }
+    }
 }
 
 hr {
